
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int filter_text (char*) ;
 int free (char*) ;
 int ftp_i ;
 scalar_t__ malloc (int) ;
 int memset (char*,int,int) ;
 int no_io ;
 int printe (char*,int) ;
 int printf (char*,char*) ;
 int read (int,char*,int) ;
 scalar_t__ strncmp (char*,char*,int) ;
 int strstr (char*,char*) ;

void ftp_read(int ftpsd){
 char *buf;
 if(!(buf=(char *)malloc(1024+1)))
  printe("ftp_read(): allocating memory failed.",1);
 memset(buf,0x0,1024);
 read(ftpsd,buf,1024);
 filter_text(buf);
 if(!no_io)
  printf("<- %s\n",buf);

 if(!ftp_i)
  if(!strstr(buf,"GtkFTPd"))
  printf("<- %s\n","Proftpd");
 if(ftp_i==2)
  if(strncmp(buf,"230",3))
   printe("invalid username/password, failed.",1);
 if(ftp_i==3)
  if(strncmp(buf,"250",3))
   printe("invalid writable directory, failed. (try \"/\")",1);
 free(buf);
 ftp_i++;
 return;
}
